packages/markdown-core/elements/html_scanners.c
/* Generated by re2c 4.6 */
#include "html_scanners.h"

/* Shared byte-scanner configuration and lexical primitives. */







bufsize_t scan_html_tag(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0, 224, 224, 224, 224, 224, 224, 224,
		224, 200, 192, 224, 224, 192, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		200, 224, 128, 224, 224, 224, 224,  64,
		224, 224, 224, 224, 224, 244, 240, 224,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 240, 224, 192, 192, 192, 224,
		224, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 224, 224, 224, 224, 240,
		192, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '@') {
		if (yych == '/') goto yy3;
	} else {
		if (yych <= 'Z') goto yy4;
		if (yych <= '`') goto yy1;
		if (yych <= 'z') goto yy4;
	}
yy1:
	++p;
yy2:
	{ return 0; }
yy3:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '@') goto yy2;
	if (yych <= 'Z') goto yy5;
	if (yych <= '`') goto yy2;
	if (yych <= 'z') goto yy5;
	goto yy2;
yy4:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '.') {
		if (yych <= '\r') {
			if (yych <= 0x08) goto yy2;
			if (yych <= '\n') goto yy8;
			if (yych <= '\f') goto yy2;
			goto yy8;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x1F) goto yy2;
				goto yy8;
			} else {
				if (yych == '-') goto yy11;
				goto yy2;
			}
		}
	} else {
		if (yych <= '>') {
			if (yych <= '/') goto yy8;
			if (yych <= '9') goto yy11;
			if (yych <= '=') goto yy2;
			goto yy8;
		} else {
			if (yych <= 'Z') {
				if (yych <= '@') goto yy2;
				goto yy11;
			} else {
				if (yych <= '`') goto yy2;
				if (yych <= 'z') goto yy11;
				goto yy2;
			}
		}
	}
yy5:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 4) goto yy5;
	if (yych <= '\r') {
		if (yych <= '\t') {
			if (yych >= '\t') goto yy14;
		} else {
			if (yych <= '\n') goto yy15;
			if (yych >= '\r') goto yy17;
		}
	} else {
		if (yych <= ' ') {
			if (yych >= ' ') goto yy14;
		} else {
			if (yych == '>') goto yy13;
		}
	}
yy6:
	p = marker;
	goto yy2;
yy7:
	++p;
	yych = (p < remaining ? input[p] : 0);
yy8:
	if (yybm[0+yych] & 8) goto yy7;
	if (yych <= ':') {
		if (yych <= '\r') {
			if (yych <= 0x08) goto yy6;
			if (yych <= '\n') goto yy9;
			if (yych <= '\f') goto yy6;
			goto yy10;
		} else {
			if (yych == '/') goto yy12;
			if (yych <= '9') goto yy6;
			goto yy18;
		}
	} else {
		if (yych <= 'Z') {
			if (yych == '>') goto yy13;
			if (yych <= '@') goto yy6;
			goto yy18;
		} else {
			if (yych <= '_') {
				if (yych <= '^') goto yy6;
				goto yy18;
			} else {
				if (yych <= '`') goto yy6;
				if (yych <= 'z') goto yy18;
				goto yy6;
			}
		}
	}
yy9:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= ':') {
		if (yych <= ' ') {
			if (yych == '\t') goto yy9;
			if (yych <= 0x1F) goto yy6;
			goto yy9;
		} else {
			if (yych == '/') goto yy12;
			if (yych <= '9') goto yy6;
			goto yy18;
		}
	} else {
		if (yych <= 'Z') {
			if (yych == '>') goto yy13;
			if (yych <= '@') goto yy6;
			goto yy18;
		} else {
			if (yych <= '_') {
				if (yych <= '^') goto yy6;
				goto yy18;
			} else {
				if (yych <= '`') goto yy6;
				if (yych <= 'z') goto yy18;
				goto yy6;
			}
		}
	}
yy10:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= ':') {
		if (yych <= ' ') {
			if (yych <= 0x08) goto yy6;
			if (yych <= '\n') goto yy9;
			if (yych <= 0x1F) goto yy6;
			goto yy9;
		} else {
			if (yych == '/') goto yy12;
			if (yych <= '9') goto yy6;
			goto yy18;
		}
	} else {
		if (yych <= 'Z') {
			if (yych == '>') goto yy13;
			if (yych <= '@') goto yy6;
			goto yy18;
		} else {
			if (yych <= '_') {
				if (yych <= '^') goto yy6;
				goto yy18;
			} else {
				if (yych <= '`') goto yy6;
				if (yych <= 'z') goto yy18;
				goto yy6;
			}
		}
	}
yy11:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 8) goto yy7;
	if (yych <= '/') {
		if (yych <= '\r') {
			if (yych <= 0x08) goto yy6;
			if (yych <= '\n') goto yy9;
			if (yych <= '\f') goto yy6;
			goto yy10;
		} else {
			if (yych == '-') goto yy11;
			if (yych <= '.') goto yy6;
		}
	} else {
		if (yych <= '@') {
			if (yych <= '9') goto yy11;
			if (yych == '>') goto yy13;
			goto yy6;
		} else {
			if (yych <= 'Z') goto yy11;
			if (yych <= '`') goto yy6;
			if (yych <= 'z') goto yy11;
			goto yy6;
		}
	}
yy12:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych != '>') goto yy6;
yy13:
	++p;
	{ return (bufsize_t)(p - start); }
yy14:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '\r') {
		if (yych <= '\t') {
			if (yych <= 0x08) goto yy6;
			goto yy14;
		} else {
			if (yych <= '\n') goto yy15;
			if (yych <= '\f') goto yy6;
			goto yy17;
		}
	} else {
		if (yych <= ' ') {
			if (yych <= 0x1F) goto yy6;
			goto yy14;
		} else {
			if (yych == '>') goto yy13;
			goto yy6;
		}
	}
yy15:
	++p;
	yych = (p < remaining ? input[p] : 0);
yy16:
	if (yych <= 0x1F) {
		if (yych == '\t') goto yy15;
		goto yy6;
	} else {
		if (yych <= ' ') goto yy15;
		if (yych == '>') goto yy13;
		goto yy6;
	}
yy17:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == '\n') goto yy15;
	goto yy16;
yy18:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 16) goto yy18;
	if (yych <= 0x1F) {
		if (yych <= '\n') {
			if (yych <= 0x08) goto yy6;
			if (yych >= '\n') goto yy20;
		} else {
			if (yych == '\r') goto yy21;
			goto yy6;
		}
	} else {
		if (yych <= '/') {
			if (yych <= ' ') goto yy19;
			if (yych <= ',') goto yy6;
			goto yy12;
		} else {
			if (yych <= '<') goto yy6;
			if (yych <= '=') goto yy22;
			if (yych <= '>') goto yy13;
			goto yy6;
		}
	}
yy19:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= '\r') {
			if (yych <= '\t') {
				if (yych <= 0x08) goto yy6;
				goto yy19;
			} else {
				if (yych <= '\n') goto yy20;
				if (yych <= '\f') goto yy6;
				goto yy21;
			}
		} else {
			if (yych <= ' ') {
				if (yych <= 0x1F) goto yy6;
				goto yy19;
			} else {
				if (yych == '/') goto yy12;
				goto yy6;
			}
		}
	} else {
		if (yych <= '@') {
			if (yych <= '<') {
				if (yych <= ':') goto yy18;
				goto yy6;
			} else {
				if (yych <= '=') goto yy22;
				if (yych <= '>') goto yy13;
				goto yy6;
			}
		} else {
			if (yych <= '_') {
				if (yych <= 'Z') goto yy18;
				if (yych <= '^') goto yy6;
				goto yy18;
			} else {
				if (yych <= '`') goto yy6;
				if (yych <= 'z') goto yy18;
				goto yy6;
			}
		}
	}
yy20:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '<') {
		if (yych <= ' ') {
			if (yych == '\t') goto yy20;
			if (yych <= 0x1F) goto yy6;
			goto yy20;
		} else {
			if (yych <= '/') {
				if (yych <= '.') goto yy6;
				goto yy12;
			} else {
				if (yych == ':') goto yy18;
				goto yy6;
			}
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '=') goto yy22;
			if (yych <= '>') goto yy13;
			if (yych <= '@') goto yy6;
			goto yy18;
		} else {
			if (yych <= '_') {
				if (yych <= '^') goto yy6;
				goto yy18;
			} else {
				if (yych <= '`') goto yy6;
				if (yych <= 'z') goto yy18;
				goto yy6;
			}
		}
	}
yy21:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '<') {
		if (yych <= ' ') {
			if (yych <= 0x08) goto yy6;
			if (yych <= '\n') goto yy20;
			if (yych <= 0x1F) goto yy6;
			goto yy20;
		} else {
			if (yych <= '/') {
				if (yych <= '.') goto yy6;
				goto yy12;
			} else {
				if (yych == ':') goto yy18;
				goto yy6;
			}
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '=') goto yy22;
			if (yych <= '>') goto yy13;
			if (yych <= '@') goto yy6;
			goto yy18;
		} else {
			if (yych <= '_') {
				if (yych <= '^') goto yy6;
				goto yy18;
			} else {
				if (yych <= '`') goto yy6;
				if (yych <= 'z') goto yy18;
				goto yy6;
			}
		}
	}
yy22:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy23;
	if (yych <= '\r') {
		if (yych <= 0x00) goto yy6;
		if (yych <= '\t') goto yy22;
		if (yych <= '\n') goto yy24;
		goto yy25;
	} else {
		if (yych <= ' ') goto yy22;
		if (yych <= '"') goto yy26;
		if (yych <= '\'') goto yy27;
		goto yy6;
	}
yy23:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy23;
	if (yych <= '\r') {
		if (yych <= 0x00) goto yy6;
		if (yych <= '\t') goto yy7;
		if (yych <= '\n') goto yy9;
		goto yy10;
	} else {
		if (yych <= ' ') goto yy7;
		if (yych == '>') goto yy13;
		goto yy6;
	}
yy24:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy23;
	if (yych <= '\r') {
		if (yych <= 0x00) goto yy6;
		if (yych <= '\t') goto yy24;
		goto yy6;
	} else {
		if (yych <= ' ') goto yy24;
		if (yych <= '"') goto yy26;
		if (yych <= '\'') goto yy27;
		goto yy6;
	}
yy25:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy23;
	if (yych <= '\r') {
		if (yych <= 0x00) goto yy6;
		if (yych <= '\n') goto yy24;
		goto yy6;
	} else {
		if (yych <= ' ') goto yy24;
		if (yych <= '"') goto yy26;
		if (yych <= '\'') goto yy27;
		goto yy6;
	}
yy26:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy26;
	if (yych <= 0x00) goto yy6;
	goto yy28;
yy27:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy27;
	if (yych <= 0x00) goto yy6;
yy28:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 8) goto yy7;
	if (yych <= '\r') {
		if (yych <= 0x08) goto yy6;
		if (yych <= '\n') goto yy9;
		if (yych <= '\f') goto yy6;
		goto yy10;
	} else {
		if (yych <= '/') {
			if (yych <= '.') goto yy6;
			goto yy12;
		} else {
			if (yych == '>') goto yy13;
			goto yy6;
		}
	}
}

}

bufsize_t scan_html_pi(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128,   0,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128
	};
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy31;
	if (yych >= 0x01) goto yy33;
	++p;
yy30:
	{ return 0; }
yy31:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy31;
	if (yych >= 0x01) goto yy34;
yy32:
	{ return (bufsize_t)(p - start); }
yy33:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= 0x00) goto yy30;
	if (yych == '>') goto yy30;
	goto yy31;
yy34:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= 0x00) goto yy35;
	if (yych != '>') goto yy31;
yy35:
	p = marker;
	goto yy32;
}

}

bufsize_t scan_html_declaration(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;
  (void) marker;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128,   0, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '@') goto yy37;
	if (yych <= 'Z') goto yy38;
	if (yych <= '`') goto yy37;
	if (yych <= 'z') goto yy38;
yy37:
	++p;
	{ return 0; }
yy38:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy38;
	{ return (bufsize_t)(p - start); }
}

}

bufsize_t scan_html_cdata(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[256] = {
		  0, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128,   0, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych == 'C') goto yy41;
	if (yych == 'c') goto yy41;
	++p;
yy40:
	{ return 0; }
yy41:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == 'D') goto yy42;
	if (yych != 'd') goto yy40;
yy42:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == 'A') goto yy44;
	if (yych == 'a') goto yy44;
yy43:
	p = marker;
	if (yyaccept == 0) goto yy40;
	else goto yy48;
yy44:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == 'T') goto yy45;
	if (yych != 't') goto yy43;
yy45:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == 'A') goto yy46;
	if (yych != 'a') goto yy43;
yy46:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych != '[') goto yy43;
yy47:
	yyaccept = 1;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy47;
	if (yych >= 0x01) goto yy49;
yy48:
	{ return (bufsize_t)(p - start); }
yy49:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy47;
	if (yych <= 0x00) goto yy43;
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= 0x00) goto yy43;
	if (yych == '>') goto yy43;
	goto yy47;
}

}

bufsize_t scan_html_block_start(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
